welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:42: error: overriding method avance in class SimpleBuggle of type (x$1: Int)Unit;
 method avance needs `override' modifier
def avance(n:Int)
    ^